# eddy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-07-15-professional-gestures.md  2026-07-21-ocr-blur-reliability.md
docs/specs/: 2026-07-15-annotation-video-polish-design.md
packaging/windows/: Eddy.nsi  Eddy.wxs  License.rtf  build-msi.ps1  build-nsis.ps1
resources/: eddy.qrc  eddy.qss
src/: boltsnapipc.cpp  boltsnapipc.h  canvas.cpp  canvas.h  cli.cpp  cli.h  compositor.cpp  compositor.h  config.cpp  config.h  dragpill.cpp  dragpill.h  editorwindow.cpp  editorwindow.h  imageio.cpp  main.cpp  ocr.cpp  ocr.h  redactbar.cpp  redactbar.h  redactocrcontroller.cpp  redactocrcontroller.h  selectionhandles.cpp  selectionhandles.h  theme.cpp  theme.h  toast.cpp  toast.h  toolbar.cpp  toolbar.h  toolcontroller.cpp  toolcontroller.h  undocommands.cpp  undocommands.h  videoexporter.cpp  videoexporter.h  waylanddrag.cpp  waylanddrag.h
src/items/: annotationitem.h  arrowitem.cpp  arrowitem.h  ellipseitem.cpp  ellipseitem.h  highlightitem.cpp  highlightitem.h  penpathitem.cpp  penpathitem.h  rasteritem.cpp  rasteritem.h  rectitem.cpp  rectitem.h  redactitem.cpp  redactitem.h  textitem.cpp  textitem.h
tests/: test_boltsnapipc.cpp  test_canvas.cpp  test_cli.cpp  test_compositor.cpp  test_config.cpp  test_dragpill.cpp  test_editorwindow.cpp  test_imageio.cpp  test_items.cpp  test_ocr.cpp  test_raster.cpp  test_redactbar.cpp  test_redactocrcontroller.cpp  test_selectionhandles.cpp  test_theme.cpp  test_toast.cpp  test_toolbar.cpp  test_toolcontroller.cpp  test_videoexporter.cpp
tools/: eddy_preview.cpp
